@@ -34,7 +34,6 @@ class IssuesController < AuthenticatedController
     @first_evidence  = Evidence.where(node: @first_node, issue: @issue)
 
     load_conflicting_revisions(@issue)
-    @subscription = @issue.subscription_for(user: current_user)
   end
 
   def new
