@@ -1,4 +1,13 @@
 class SubscriptionsController < AuthenticatedController
+  layout false
+
+  def index
+    @subscriptions = subscribable.subscriptions.includes(:user)
+
+    # Used for showing/hiding subscribe and unsubscribe links
+    @subscription = subscribable.subscription_for(user: current_user)
+  end
+
   def create
     subscription = Subscription.new(subscription_params)
     subscription.user = current_user
@@ -19,6 +28,18 @@ class SubscriptionsController < AuthenticatedController
   end
 
   private
+
+  def subscribable
+    @subscribable ||= subscribable_class.find(subscription_params[:subscribable_id])
+  end
+
+  def subscribable_class
+    if Subscribable.allowed_types.include?(subscription_params[:subscribable_type])
+      subscription_params[:subscribable_type].constantize
+    else
+      raise 'Invalid subscribable'
+    end
+  end
 
   def subscription_params
     params.require(:subscription).permit(:subscribable_type, :subscribable_id)
