@@ -1,7 +1,11 @@
 module Subscribable
   extend ActiveSupport::Concern
 
-  included do
+  mattr_accessor :allowed_types, default: []
+
+  included do |base|
+    Subscribable.allowed_types << base.name
+
     has_many :subscriptions, as: :subscribable, dependent: :destroy
 
     after_create :create_subscription
