@@ -2,6 +2,7 @@
 
 <%= link_to \
       main_app.subscription_path(
+        subscribable,
         subscription: {
           subscribable_type: subscribable.class.to_s,
           subscribable_id: subscribable.id
@@ -14,6 +15,7 @@
 <% end %>
 <%= link_to \
       main_app.subscriptions_path(
+        subscribable,
         subscription: {
           subscribable_type: subscribable.class.to_s,
           subscribable_id: subscribable.id
